manifests/svampapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svampapp-deployment
  labels:
    app: svampapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: svampapp
  template:
    metadata:
      labels:
        app: svampapp
    spec:
      containers:
      - name: svampapp
        image: svampapp.azurecr.io/svampapp:latest
        ports:
        - containerPort: 8080
