manifests/svampapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svampapp-service
  labels:
    app: svampapp
spec:
  type: ClusterIP
  selector:
    app: svampapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
